Sun Aug 28 15:38:17 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/date/date_parse.c (date_zone_to_diff): keep a temporary string
	  stored in variable while the contents buffer is beeing used.

	* ext/date/date_parse.c (date_zone_to_diff): get rid of out of bounds
	  memory read. [ruby-dev:44409] [Bug #5213]

Sun Aug 28 05:29:50 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.5.1 (r6596)
	* test/minitest/*: ditto

Sat Aug 27 20:46:05 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_vm_rewrite_dfp_in_errinfo): change return type
	  to suppress a warning.

	* vm_core.h: ditto.

Sat Aug 27 19:04:06 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* internal.h (rb_strftime_timespec): moved from time.c and define only
	  if ruby/encoding.h is included.

	* internal.h (rb_strftime): ditto.

Sat Aug 27 18:53:51 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_new): force to rewrite errinfo when calling Proc.new in ensure.
	  [Bug #5234] [ruby-core:39125]
	  This code will be removed after changing throw mechanism (see r33064).

	* vm.c (rb_vm_rewrite_dfp_in_errinfo): new function.

	* vm.c (vm_make_env_each): changed accordingly.

	* vm_core.h: ditto.

	* bootstraptest/test_flow.rb: add tests for above.

Sat Aug 27 18:44:06 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* internal.h (rb_strftime_timespec): move to time.c because it depends
	  encoding.h.

Sat Aug 27 18:17:58 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): get enc argument to specify
	  the encoding of the format. On Windows (at least Japanese Windows),
	  Time#strftime("%Z") includes non ASCII in locale encoding (CP932).
	  So convert locale to default internal. [ruby-core:39092] [Bug #5226]

	* strftime.c (rb_strftime): ditto.

	* strftime.c (rb_strftime_timespec): ditto.

	* internal.h (rb_strftime_timespec): follow above.

	* time.c (rb_strftime_alloc): ditto.

	* time.c (strftimev): ditto.
